Add endpoint to create first generation
